# hydro-forecasting

./: .copilot-codeGeneration-instructions.md  .gitignore  CLAUDE.md  Dockerfile  README.md  check_parquet_files.py  example_multi_model_plot.py  fix-issue-1-changes.md  pyproject.toml  runpod_setup.sh  test_batch_read.py
.claude/: settings.local.json
.claude/commands/: fix-issue.md
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
docs/: batch_training_and_preprocessing.md  cache_implementation_plan.md  data_processing.md  experiment-setup-guidelines.md  migrate_away_from_ROP_report.md  model_implementation_guidelines.md  streamline_evaluation_plan.md
experiments/HPT/: best_params.yaml  run_experiment.ipynb
experiments/HPT/.ipynb_checkpoints/: run_experiment-checkpoint.ipynb
experiments/HPT/HPT_ealstm_kyrgyzstan/: HPT_ealstm_kyrgyzstan_study.db  ealstm_best_params.yaml
experiments/HPT/HPT_ealstm_tajikistan/: HPT_ealstm_tajikistan_study.db  ealstm_best_params.yaml
experiments/HPT/HPT_tft_kyrgyzstan/: HPT_tft_kyrgyzstan_study.db  tft_best_params.yaml
experiments/HPT/HPT_tft_tajikistan/: HPT_tft_tajikistan_study.db
experiments/HPT/HPT_tide_kyrgyzstan/: HPT_tide_kyrgyzstan_study.db  tide_best_params.yaml
experiments/HPT/HPT_tide_tajikistan/: HPT_tide_tajikistan_study.db  tide_best_params.yaml
experiments/HPT/HPT_tidetajikistan/: HPT_tidetajikistan_study.db
experiments/HPT/HPT_tsmixer_kyrgyzstan/: HPT_tsmixer_kyrgyzstan_study.db  tsmixer_best_params.yaml
experiments/HPT/HPT_tsmixer_tajikistan/: HPT_tsmixer_tajikistan_study.db
experiments/HPT/HPT_unified_with_RevIN_ealstm_kyrgyzstan/: HPT_unified_with_RevIN_ealstm_kyrgyzstan_study.db  ealstm_best_params.yaml
experiments/HPT/HPT_unified_with_RevIN_ealstm_tajikistan/: HPT_unified_with_RevIN_ealstm_tajikistan_study.db  ealstm_best_params.yaml
experiments/HPT/HPT_unified_with_RevIN_tft_kyrgyzstan/: HPT_unified_with_RevIN_tft_kyrgyzstan_study.db  tft_best_params.yaml
experiments/HPT/HPT_unified_with_RevIN_tft_tajikistan/: HPT_unified_with_RevIN_tft_tajikistan_study.db  tft_best_params.yaml
experiments/HPT/HPT_unified_with_RevIN_tide_kyrgyzstan/: HPT_unified_with_RevIN_tide_kyrgyzstan_study.db  tide_best_params.yaml
experiments/HPT/HPT_unified_with_RevIN_tide_tajikistan/: HPT_unified_with_RevIN_tide_tajikistan_study.db  tide_best_params.yaml
experiments/HPT/HPT_unified_with_RevIN_tsmixer_kyrgyzstan/: HPT_unified_with_RevIN_tsmixer_kyrgyzstan_study.db  tsmixer_best_params.yaml
experiments/HPT/HPT_unified_with_RevIN_tsmixer_tajikistan/: HPT_unified_with_RevIN_tsmixer_tajikistan_study.db
experiments/HPT/HPT_with_RevIN_ealstm_tajikistan/: HPT_with_RevIN_ealstm_tajikistan_study.db  ealstm_best_params.yaml
experiments/HPT/HPT_with_RevIN_tide_tajikistan/: HPT_with_RevIN_tide_tajikistan_study.db  tide_best_params.yaml
experiments/HPT/HPT_with_RevIN_tsmixer_tajikistan/: HPT_with_RevIN_tsmixer_tajikistan_study.db
experiments/HPT/search-spaces/: __init__.py  ealstm_space.py  tft_space.py  tide_space.py  tsmixer_space.py
experiments/TiDE_on_low_medium/: config.py  data_loader.py  experiment.py  run_experiment.py
experiments/benchmark/: run_experiment.ipynb
experiments/finetune/: run_experiment.ipynb
experiments/low-medium-hii/: run_experiment.ipynb
experiments/similar_catchments/: run_experiment.ipynb
experiments/yaml-files/kyrgyzstan/: ealstm.yaml  tft.yaml  tide.yaml  tsmixer.yaml
experiments/yaml-files/kyrgyzstan-old/: tsmixer.yaml
experiments/yaml-files/tajikistan/: ealstm.yaml  tft.yaml  tide.yaml  tsmixer.yaml
experiments/yaml-files/tajikistan-old/: tft.yaml  tsmixer.yaml
notebooks/: CA_climate.ipynb  clean_data_to_parquet.ipynb  climate_physio_attr_clusters.ipynb  cluster_map_CA.ipynb  data_availability_plot.ipynb  data_lazy_loader.ipynb  evaluate_basin_clustering.ipynb  get_tajik_gauge_loc.ipynb  test_clean_data.ipynb  test_dataloader.ipynb  test_index_entry_creator.ipynb  test_new_experiment_design.ipynb  test_preprocessing_with_pipeline_fitting.ipynb  test_run_hydro_processor.ipynb  test_static_preprocessinng.ipynb  testing_hii.ipynb  transfer_learning_summary.ipynb  yolo_testing_1.ipynb
notebooks/lightning_logs/version_0/: metrics.csv
notebooks/lightning_logs/version_1/: hparams.yaml
scratchpads/issues/: README.md  issue-5-fix-test-failures-cleanup.md  lint-format-failures-pr10.md  scratchpad-issue-1-plan.md  scratchpad-issue-2-plan.md  scratchpad-issue-4-plan.md
scratchpads/planning/: README.md  fix_linting_formatting_typing_tests.md  github_issues_creation_process.md
scratchpads/research/: README.md
scripts/: dev.py
scripts/cluster_basins/: cluster_all.py  plot_clusters_custom.py  plot_clusters_custom_direct.py  random_forest_classification.py
scripts/cluster_basins/cache/: processed_hydrographs.pkl
scripts/cluster_basins/classification_results/: cluster_probabilities.csv  performance_metrics.txt
scripts/cluster_basins/clustering_results/: cluster_assignments_shifted_refactor.csv
scripts/human_influence_index/: hii.py
src/hydro_forecasting/: __init__.py  exceptions.py
src/hydro_forecasting/clustering/: preprocess_time_series.py  (+2 more)
tests/: README.md  conftest.py
tests/data/: test_preprocessing.py
tests/integration/: test_preprocessing_workflow.py  test_seed_integration.py
tests/unit/: test_clean_data.py  test_grouped_pipeline.py  test_pipeline_builder.py  test_preprocessing.py  test_seed_manager.py  test_transformer_registry.py  test_unified_pipeline.py
(+2443 files in other folders)
