[project]
name = "hydro-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "CooperBigFoot", email = "nlazaro@student.ethz.ch" }]
requires-python = ">=3.10"
dependencies = [
  "dtaidistance>=2.3.13",
  "duckdb>=1.2.2",
  "geopandas>=1.0.1",
  "hydra-core>=1.3.2",
  "ipykernel>=6.29.5",
  "lightning>=2.5.1.post0",
  "matplotlib>=3.10.1",
  "numpy>=2.2.5",
  "optuna>=4.3.0",
  "pandas>=2.2.3",
  "polars>=1.29.0",
  "pyarrow>=20.0.0",
  "pympler>=1.1",
  "returns>=0.25.0",
  "ruff>=0.11.8",
  "scikit-learn>=1.6.1",
  "seaborn>=0.13.2",
  "tensorboard>=2.19.0",
  "torch>=2.7.0",
]

[project.scripts]
hydro-forecasting = "hydro_forecasting:main"
hii = "scripts.human_influence_index.hii:main"
cluster_all = "scripts.cluster_basins.cluster_all:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/hydro_forecasting", "scripts"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"." = "scripts"

[tool.hatch.build.targets.sdist]
include = [
  "src/hydro_forecasting/**",
  "scripts/**",
  "pyproject.toml",
  "README.md",
]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.8"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 120
target-version = "py310" # Assuming Python 3.10+
fix = false

[tool.ruff.lint]
# E/F (Pyflakes), W (pycodestyle), N (pep8-naming), I (isort),
# UP (pyupgrade), B (flake8-bugbear), C4 (flake8-comprehensions), SIM (flake8-simplify)
select = ["E", "F", "W", "N", "I", "UP", "B", "C4", "SIM"]
