[project]
name = "hydro-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "CooperBigFoot", email = "nlazaro@student.ethz.ch" }]
requires-python = ">=3.10"
dependencies = [
  "cartopy>=0.24.1",
  "dtaidistance>=2.3.13",
  "duckdb>=1.2.2",
  "geopandas>=1.0.1",
  "hydra-core>=1.3.2",
  "ipykernel>=6.29.5",
  "ipywidgets>=8.1.7",
  "lightning>=2.5.1.post0",
  "matplotlib>=3.10.1",
  "numpy>=2.2.5",
  "optuna>=4.3.0",
  "optuna-integration[pytorch-lightning]>=4.3.0",
  "pandas>=2.2.3",
  "polars>=1.29.0",
  "psutil>=7.0.0",
  "pyarrow>=20.0.0",
  "pympler>=1.1",
  "pytest>=8.3.5",
  "pytest-mock>=3.14.1",
  "rasterio>=1.4.3",
  "returns>=0.25.0",
  "ruff>=0.11.8",
  "scikit-learn>=1.6.1",
  "scipy>=1.15.0",
  "seaborn>=0.13.2",
  "tensorboard>=2.19.0",
  "torch>=2.7.0",
]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.8", "ty>=0.0.1a12"]

[tool.setuptools.packages.find]
where = ["src"]

# RUFF Configuration
[tool.ruff]
line-length = 120
target-version = "py310"
fix = false
exclude = [
    "notebooks/",
    "**/*.ipynb",
    "**/deprecated/**",
    "**/*deprecated*/**",
    "experiments/",
    "src/hydro_forecasting/data_deprecated/",
]

[tool.ruff.lint]
# Essential rules: errors, warnings, naming, imports, modern Python, bugs, comprehensions, simplifications
select = ["E", "F", "W", "N", "I", "UP", "B", "C4", "SIM"]
ignore = [
  "E501", # Line too long (let formatter handle this)
  "N803", # Argument name should be lowercase - ML convention allows X, Y
  "N806", # Variable in function should be lowercase - ML convention allows X, Y
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# TY Configuration  
[tool.ty]
# Ty doesn't support exclude in pyproject.toml yet
# Files are excluded via .gitignore or command line args

[tool.ty.rules]
# Example: Set some rules to warn instead of error for gradual adoption
possibly-unresolved-reference = "warn"

# Pytest Configuration
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra",              # Show all test results
  "--ignore=notebooks/",
  "--ignore=src/hydro_forecasting/data_deprecated/",
]
